<resources>
    <string name="app_name">App Hola Mundo</string>
    <string name="titulo">Mi primer aplicacion Android</string>
    <string name="tunombre">Cual es tu nombre?</string>
    <string name="pulsar">pulsame</string>
    <string name="limpiar">Limpiar</string>
    <string name="cerrar">Cerrar</string>

    <string name="tituloImc">Calculadora de IMC</string>
    <string name="peso">Peso (kg):</string>
    <string name="hint_peso">Ejemplo: 70.5</string>
    <string name="estatura">Estatura (m):</string>
    <string name="hintEstatura">Ejemplo: 1.75</string>
    <string name="btnCalcularImc">Calcular IMC</string>

    <string name="tituloConversion">Conversión de Temperatura</string>
    <string name="hintGrados">Ingresa un valor</string>
    <string name="celsiusaFahrenheit">Celsius a Fahrenheit</string>
    <string name="fahrenheitaCelsius">Fahrenheit a Celsius</string>
    <string name="btnConvertir">Convertir</string>

    <string name="btnLimpiar">LIMPIAR</string>
    <string name="btnSalir">SALIR</string>


    <string-array name="array_converciones">
        <item>MXN a USD</item>
        <item>MXN a CAD</item>
        <item>MXN a EUR</item>
        <item>USD a MXN</item>
        <item>CAD a MXN</item>
        <item>EUR a MXN</item>
    </string-array>

    <string name="domicilio">Av. del Mar 1200</string>
    <string name="ciudad">Mazatlán Sinaloa</string>
    <string name="marca">Toyota</string>
    <string name="cliente">Nombre del Cliente</string>
    <string name="folio">Num. Folio</string>
    <string name="des">Descripción del Automóvil</string>
    <string name="precio">Valor del Automóvil</string>
    <string name="po">Porcentaje de pago Inicial</string>
    <string name="plazos">Plazos</string>
    <string name="pmensual">Pago Mensual</string>
    <string name="pinicial">Pago Inicial</string>
    <string name="tfin">Total a Financiar</string>

    <string name="spinner_name">Spinner Personalizado</string>
    <string name="itemFraces">Categorias de Fraces</string>
    <string name="itemAgradecimiento">Agradecimiento</string>
    <string name="itemAmor">Amor</string>
    <string name="itemNewYear">Año Nuevo</string>
    <string name="itemCanciones">Canciones</string>
    <string name="alumno_jose">Jose Santamaria Diaz</string>
    <string name="alumno_carolina">Carolina Sarmiento Estrada</string>
    <string name="alumno_jade">Jade Camacho Osuna</string>
    <string name="alumno_daniel">Daniel Lopez Tirado</string>
    <string name="itemlistado">Listado de Alumnos</string>
    <string name="alumno_alfredo">Alfredo Cruz Alatorre</string>
    <string name="alumno_anddy">Anddy Santander Peralta</string>
    <string name="alumno_azul">Azul Cota Rodriguez</string>
    <string name="alumno_santiago">Santiago Avila Benites</string>
    <string name="msgFrace">Desplegar</string>
    <string name="msgAgradecimiento">Prueba dar las Gracias</string>
    <string name="msgAmor">Enamora con estas frases</string>
    <string name="msgNewYear">Feliz año Nuevo</string>
    <string name="msgCanciones">Escucha solo lo mejor</string>
    <string name="msgSeleccion">Se ha seleccionado</string>
    <string name="msgDescripcion">Selecciona una Categoria</string>
    <string name="txtSeleccion">Seleccionate a</string>

    <string name="titulo_nomina">Calculo de Pago de Nomina</string>
    <string name="autor_nomina">Evaristo Toscano</string>
    <string name="recibo">Número de recibo</string>
    <string name="nombre">Nombre</string>
    <string name="horas_trabajadas">Horas trabajadas</string>
    <string name="horas_extras">Horas Extras</string>
    <string name="puesto">Puesto</string>
    <string name="auxiliar">Auxiliar</string>
    <string name="albanil">Albañil</string>
    <string name="ingeniero">Ing. Obra</string>
    <string name="calcular">Calcular</string>
    <string name="regresar">Regresar</string>
    <string name="subtotal">Subtotal:</string>
    <string name="impuesto">Impuesto:</string>
    <string name="total_pagar">Total a pagar:</string>
    <string name="ingrese_nombre">Falta capturar el nombre del trabajador</string>

</resources>