<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpinnerActividad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemFraces"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />


        <TextView
            android:id="@+id/txtSeleccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msgSeleccion"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/rojo"
            android:layout_marginBottom="12dp" />


        <Spinner
            android:id="@+id/spnItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnLimpiar"
                android:textColor="@android:color/white"
                android:backgroundTint="#666666"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnSalir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cerrar"
                android:textColor="@android:color/white"
                android:backgroundTint="#D32F2F"
                android:layout_marginStart="8dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
